--- a/public/index.html
+++ b/public/index.html
@@ -290,7 +290,7 @@
                         document.getElementById("pf").innerHTML =
                             "Your Profile";
                         document.querySelector("nav").innerHTML =
-                            `<a href="/matches">Matches</a><a href="/profile/me">Your Profile</a><a href="/logout">Logout</a>`;
+                            `<a href="/matches">Matches</a><a href="/profile/me">Your Profile</a><a href="/chat">Chats</a><a href="/logout">Logout</a>`;
                     }
                 });
         </script>
