--- a/public/profile/me/index.html
+++ b/public/profile/me/index.html
@@ -88,9 +88,10 @@
                 .then((data) => {
                     if (data.isAuthed) {
                         document.getElementById("actions").innerHTML = `
-                <li><a href="/">Home</a></li>
-                <li><a href="/profile/me">Your Profile</a></li>
-                <li><a href="/logout">Logout</a></li>
+                          <li><a href="/matches">Matches</a></li>
+                          <li><a href="/chat">Chats</a></li>
+                          <li><a href="/profile/me">Your Profile</a></li>
+                          <li><a href="/logout">Logout</a></li>
               `;
                     }
                     if (data.isAuthed) {
