--- a/public/profile/index.html
+++ b/public/profile/index.html
@@ -121,7 +121,8 @@
                 .then((data) => {
                     if (data.isAuthed) {
                         document.getElementById("actions").innerHTML = `
-              <li><a href="/">Home</a></li>
+              <li><a href="/matches">Matches</a></li>
+              <li><a href="/chat">Chats</a></li>
               <li><a href="/profile/me">Your Profile</a></li>
               <li><a href="/logout">Logout</a></li>
             `;
