auto adds profile to db

--- a/public/index.html
+++ b/public/index.html
@@ -293,6 +293,8 @@
                             `<a href="/matches">Matches</a><a href="/profile/me">Your Profile</a><a href="/chat">Chats</a><a href="/logout">Logout</a>`;
                     }
                 });
+
+            fetch("/myuser");   
         </script>
     </body>
 </html>
