added small margin

--- a/public/profile/me/index.html
+++ b/public/profile/me/index.html
@@ -110,7 +110,7 @@
                         </div>
                     </div>
                     
-                    <div>
+                    <div style="margin-top: 20px;">
                         <button id="editProfile" class="contrast">
                             Edit Profile
                         </button>
