--- a/public/profile/me/index.html
+++ b/public/profile/me/index.html
@@ -76,40 +76,52 @@
                     <p id="bio" style="font-size: 26px">
                         Hey there! I'm John Doe, a high school student from WA.
                     </p>
-                    <div id='thing' style="width: 100%; display:flex;">
+                    <div id="thing" style="width: 100%; display: flex">
                         <div
                             style="
-                                flex:1;
+                                flex: 1;
                                 padding-left: 50px;
                                 width: 100%;
                                 border-left: 1px solid grey;
                             "
                         >
-                            <p id="schoolTitle" style="color: rgb(150, 150, 150)">
+                            <p
+                                id="schoolTitle"
+                                style="color: rgb(150, 150, 150)"
+                            >
                                 Your Schools
                             </p>
-                            <ul id="schoolList" style="color: rgb(125, 125, 125)">
+                            <ul
+                                id="schoolList"
+                                style="color: rgb(125, 125, 125)"
+                            >
                                 <li>Nothing</li>
                             </ul>
                         </div>
                         <div
                             style="
-                                flex:1;
+                                flex: 1;
                                 width: 100%;
                                 padding-left: 50px;
                                 border-left: 1px solid grey;
                                 border-right: 1px solid grey;
                             "
                         >
-                            <p id="interestTitle" style="color: rgb(150, 150, 150)">
+                            <p
+                                id="interestTitle"
+                                style="color: rgb(150, 150, 150)"
+                            >
                                 Your Interests
                             </p>
-                            <ul id="interestList" style="color: rgb(125, 125, 125)">
+                            <ul
+                                id="interestList"
+                                style="color: rgb(125, 125, 125)"
+                            >
                                 <li>Nothing</li>
                             </ul>
                         </div>
                     </div>
-                    
+
                     <div>
                         <button id="editProfile" class="contrast">
                             Edit Profile
@@ -131,7 +143,12 @@
                           <li><a href="/logout">Logout</a></li>
               `;
                     }
+
                     if (data.isAuthed) {
+                        if (localStorage.getItem("verified") != "true") {
+                            window.location.href = "/verify";
+                        }
+
                         var id = data.uid;
                         console.log("User is authenticated with ID: " + id);
                         // Fetch user data
@@ -170,21 +187,27 @@
                                             "<i>No schools provided</i>";
                                     }
 
-                                    if (data.schools.length > 0) { 
-                                        document.getElementById("schoolList").innerHTML = '';
+                                    if (data.schools.length > 0) {
+                                        document.getElementById(
+                                            "schoolList",
+                                        ).innerHTML = "";
                                         data.schools.forEach((item) => {
-                                                document.getElementById(
-                                                    "schoolList",
-                                                ).innerHTML += "<li>" + item + "</li>";
-                                            });
+                                            document.getElementById(
+                                                "schoolList",
+                                            ).innerHTML +=
+                                                "<li>" + item + "</li>";
+                                        });
                                     }
-                                    if (data.interests.length > 0) { 
-                                        document.getElementById("interestList").innerHTML = '';
+                                    if (data.interests.length > 0) {
+                                        document.getElementById(
+                                            "interestList",
+                                        ).innerHTML = "";
                                         data.interests.forEach((item) => {
-                                                document.getElementById(
-                                                    "interestList",
-                                                ).innerHTML += "<li>" + item + "</li>";
-                                            });
+                                            document.getElementById(
+                                                "interestList",
+                                            ).innerHTML +=
+                                                "<li>" + item + "</li>";
+                                        });
                                     }
                                     // Store user data for later use
                                     window.userData = data;
@@ -216,7 +239,7 @@
             });
 
             function enterEditMode() {
-                document.getElementById('thing').style = 'display: none';
+                document.getElementById("thing").style = "display: none";
                 // Replace bio with textarea
                 var bioElement = document.getElementById("bio");
                 var bioText = bioElement.innerText;
@@ -356,7 +379,7 @@
             }
 
             function saveProfile() {
-                document.getElementById('thing').style = 'display: flex';
+                document.getElementById("thing").style = "display: flex";
                 // Get updated bio
                 var updatedBio = document.getElementById("bioTextarea").value;
 
@@ -381,21 +404,19 @@
                     }
                 });
 
-                if (updatedSchools.length > 0) { 
-                    document.getElementById("schoolList").innerHTML = '';
+                if (updatedSchools.length > 0) {
+                    document.getElementById("schoolList").innerHTML = "";
                     updatedSchools.forEach((item) => {
-                            document.getElementById(
-                                "schoolList",
-                            ).innerHTML += "<li>" + item + "</li>";
-                        });
+                        document.getElementById("schoolList").innerHTML +=
+                            "<li>" + item + "</li>";
+                    });
                 }
-                if (updatedInterests.length > 0) { 
-                    document.getElementById("interestList").innerHTML = '';
+                if (updatedInterests.length > 0) {
+                    document.getElementById("interestList").innerHTML = "";
                     updatedInterests.forEach((item) => {
-                            document.getElementById(
-                                "interestList",
-                            ).innerHTML += "<li>" + item + "</li>";
-                        });
+                        document.getElementById("interestList").innerHTML +=
+                            "<li>" + item + "</li>";
+                    });
                 }
 
                 // Replace textarea with paragraph
