--- a/public/index.html
+++ b/public/index.html
@@ -1,300 +1,249 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <title>Circles - Find Your Perfect Match</title>
-        <style>
-            body {
-                font-family: Arial, sans-serif;
-                margin: 0;
-                padding: 0;
-                background-color: #f4f4f9;
-                color: #333;
-            }
 
-            header {
-                background-color: black;
-                color: white;
-                padding: 20px 0;
-                text-align: center;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                gap: 15px;
-            }
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Circles - Find Your Perfect Match</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f9;
+            color: #333;
+        }
 
-            header img {
-                width: 50px;
-                height: 50px;
-            }
+        header {
+            background-color: #000000;
+            color: white;
+            padding: 20px 0;
+            text-align: center;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 15px;
+        }
 
-            header h1 {
-                font-size: 3em;
-                margin: 0;
-            }
+        header img {
+            width: 50px;
+            height: 50px;
+        }
 
-            nav {
-                display: flex;
-                justify-content: center;
-                gap: 20px;
-                margin: 20px 0;
-            }
+        header h1 {
+            font-size: 3em;
+            margin: 0;
+        }
 
-            nav a {
-                text-decoration: none;
-                color: #333;
-                font-size: 1.2em;
-                padding: 10px 20px;
-                border: 2px solid #fec20f;
-                border-radius: 5px;
-            }
+        nav {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin: 20px 0;
+        }
 
-            nav a:hover {
-                background-color: #fec20f;
-                color: white;
-            }
+        nav a {
+            text-decoration: none;
+            color: #333;
+            font-size: 1.2em;
+            padding: 10px 20px;
+            border: 2px solid #fec20f;
+            border-radius: 5px;
+        }
 
-            /* Parallax Section */
-            .parallax {
-                background-image: url("assets/1.png");
-                height: 500px;
-                background-attachment: fixed;
-                background-position: center;
-                background-repeat: no-repeat;
-                background-size: cover;
-                position: relative;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                color: white;
-                text-align: center;
-            }
+        nav a:hover {
+            background-color: #fec20f;
+            color: white;
+        }
 
-            .parallax h2 {
-                font-size: 3em;
-                margin-bottom: 20px;
-            }
+        /* Parallax Section */
+        .parallax {
+            background-image: url('assets/1.jpg');
+            height: 500px;
+            background-attachment: fixed;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
+            position: relative;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: white;
+            text-align: center;
+        }
 
-            .parallax p {
-                font-size: 1.5em;
-                margin-bottom: 40px;
-            }
+        .parallax h2 {
+            font-size: 3em;
+            margin-bottom: 20px;
+        }
 
-            .cta-button {
-                background-color: #fec20f;
-                color: white;
-                padding: 15px 30px;
-                text-transform: uppercase;
-                font-size: 1.2em;
-                border: none;
-                cursor: pointer;
-                border-radius: 5px;
-            }
+        .parallax p {
+            font-size: 1.5em;
+            margin-bottom: 40px;
+        }
 
-            .cta-button:hover {
-                background-color: #ffcf50;
-            }
+        .cta-button {
+            background-color: #fec20f;
+            color: white;
+            padding: 15px 30px;
+            text-transform: uppercase;
+            font-size: 1.2em;
+            border: none;
+            cursor: pointer;
+            border-radius: 5px;
+        }
 
-            section.content {
-                padding: 50px;
-                background-color: white;
-                text-align: center;
-            }
+        .cta-button:hover {
+            background-color: #ffcf50;
+        }
 
-            /* Feature Cards */
-            .features-section {
-                display: flex;
-                justify-content: space-around;
-                padding: 50px 0;
-            }
+        section.content {
+            padding: 50px;
+            background-color: white;
+            text-align: center;
+        }
 
-            .feature-card {
-                background-color: #fff;
-                border: 2px solid #fec20f;
-                border-radius: 10px;
-                width: 30%;
-                padding: 20px;
-                box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-                transition: transform 0.3s ease;
-                position: relative;
-                overflow: hidden;
-                margin-right: 10px;
-            }
+        /* Feature Cards */
+        .features-section {
+            display: flex;
+            justify-content: space-around;
+            padding: 50px 0;
+        }
 
-            .feature-card:hover {
-                transform: translateY(-10px);
-            }
+        .feature-card {
+            background-color: #fff;
+            border: 2px solid #fec20f;
+            border-radius: 10px;
+            width: 30%;
+            padding: 20px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease;
+            position: relative;
+            overflow: hidden;
+        }
 
-            .feature-card h3 {
-                font-size: 1.5em;
-                margin-bottom: 15px;
-            }
+        .feature-card:hover {
+            transform: translateY(-10px);
+        }
 
-            .feature-card p {
-                font-size: 1em;
-                margin-bottom: 20px;
-            }
+        .feature-card h3 {
+            font-size: 1.5em;
+            margin-bottom: 15px;
+        }
 
-            /* Solution reveal on hover */
-            .feature-card .solution {
-                position: absolute;
-                top: 100%;
-                left: 0;
-                width: 90%;
-                background-color: #fec20f;
-                color: white;
-                padding: 20px;
-                text-align: center;
-                transition: top 0.3s ease;
-            }
+        .feature-card p {
+            font-size: 1em;
+            margin-bottom: 20px;
+        }
 
-            .feature-card:hover .solution {
-                top: 0;
-            }
+        /* Solution reveal on hover */
+        .feature-card .solution {
+            position: absolute;
+            top: 100%;
+            left: 0;
+            width: 100%;
+            background-color: #fec20f;
+            color: white;
+            padding: 20px;
+            text-align: center;
+            transition: top 0.3s ease;
+        }
 
-            footer {
-                background-color: #333;
-                color: white;
-                padding: 20px 0;
-                text-align: center;
-                margin-top: 50px;
-            }
+        .feature-card:hover .solution {
+            top: 0;
+        }
 
-            footer p {
-                margin: 0;
-            }
+        footer {
+            background-color: #333;
+            color: white;
+            padding: 20px 0;
+            text-align: center;
+            margin-top: 50px;
+        }
 
-            footer a {
-                color: #fec20f;
-                text-decoration: none;
-            }
-        </style>
-    </head>
+        footer p {
+            margin: 0;
+        }
 
-    <body>
-        <header id="top1">
-            <img
-                src="assets/circlesbs.png"
-                alt="Circles Logo"
-                style="width: 220px"
-            />
-        </header>
+        footer a {
+            color: #fec20f;
+            text-decoration: none;
+        }
+    </style>
+</head>
 
-        <nav id="nav">
-            <a href="#top1">Home</a>
-            <a href="#mid1">Features</a>
-            <a href="/login">Sign Up</a>
-            <a href="/login">Login</a>
-        </nav>
+<body>
 
-        <!-- Parallax Section -->
-        <section class="parallax">
-            <div>
-                <h2>Connect with Like-minded People</h2>
-                <p>
-                    Join thousands of singles who have found love through
-                    Circles. Your match is just a click away.
-                </p>
-                <button
-                    id="pf"
-                    class="cta-button"
-                    onclick="window.location.href='/profile/me'"
-                >
-                    Join Now
-                </button>
-            </div>
-        </section>
+    <header>
+        <img
+            src="assets/circlesbs.png"
+            alt="Circles Logo"
+            style="width: 220px"
+        />
+    </header>
 
-        <!-- Content Section -->
-        <section class="content" id="mid1">
-            <h2>Why Circles?</h2>
-            <p>
-                Our platform offers unique features to help you find your
-                perfect match.
-            </p>
+    <nav>
+        <a href="#about">About Us</a>
+        <a href="#features">Features</a>
+        <a href="#sign-up">Sign Up</a>
+        <a href="#login">Login</a>
+    </nav>
 
-            <!-- Features Section -->
-            <div class="features-section">
-                <!-- Card 1: Shallow Level of Connection -->
-                <div class="feature-card">
-                    <h3>Shallow Level of Connection</h3>
-                    <p>
-                        Many users complain about the lack of meaningful
-                        connections on dating apps, as matching is often based
-                        on superficial criteria like looks and location.
-                    </p>
-                    <div class="solution">
-                        <h3>Our Solution</h3>
-                        <p>
-                            Circles encourages deeper connections by using
-                            interest-based matching, meaningful conversation
-                            starters, and curated profiles to foster genuine
-                            relationships.
-                        </p>
-                    </div>
-                </div>
+    <!-- Parallax Section -->
+    <section class="parallax">
+        <div>
+            <h2>Connecting the Past, Creating the Future.</h2>
+            <p>Join thousands of singles who have found love through Circles. Your match is just a click away.</p>
+            <button class="cta-button" onclick="window.location.href='#sign-up'">Join Now</button>
+        </div>
+    </section>
 
-                <!-- Card 2: Boring Conversations -->
-                <div class="feature-card">
-                    <h3>Boring Conversations</h3>
-                    <p>
-                        The prevalence of pickup lines and generic messages has
-                        led to uninteresting and meaningless small talk on
-                        dating apps.
-                    </p>
-                    <div class="solution">
-                        <h3>Our Solution</h3>
-                        <p>
-                            Circles promotes dynamic conversation starters and
-                            personality-based prompts that lead to more engaging
-                            and fun interactions.
-                        </p>
-                    </div>
-                </div>
+    <!-- Content Section -->
+    <section class="content">
+        <h2>Why Circles?</h2>
+        <p>Our platform offers unique features to help you find your perfect match.</p>
 
-                <!-- Card 3: Unreliability -->
-                <div class="feature-card">
-                    <h3>Unreliability</h3>
-                    <p>
-                        It’s tough for startups to keep up with trends without a
-                        big team or resources, making some platforms less
-                        reliable in delivering on promises.
-                    </p>
-                    <div class="solution">
-                        <h3>Our Solution</h3>
-                        <p>
-                            Circles is constantly updated with new features and
-                            feedback-driven enhancements, ensuring a reliable
-                            and evolving platform.
-                        </p>
-                    </div>
+        <!-- Features Section -->
+        <div class="features-section">
+            <!-- Card 1: Shallow Level of Connection -->
+            <div class="feature-card">
+                <h3>Shallow Level of Connection</h3>
+                <p>Many users complain about the lack of meaningful connections on dating apps, as matching is often based on superficial criteria like looks and location.</p>
+                <div class="solution">
+                    <h3>Our Solution</h3>
+                    <p>Circles encourages deeper connections by using interest-based matching, meaningful conversation starters, and curated profiles to foster genuine relationships.</p>
                 </div>
             </div>
-        </section>
 
-        <footer>
-            <p>&copy; 2024 Circles. All rights reserved.</p>
-            <p>
-                <a href="#terms">Terms of Service</a> |
-                <a href="#privacy">Privacy Policy</a>
-            </p>
-        </footer>
+            <!-- Card 2: Boring Conversations -->
+            <div class="feature-card">
+                <h3>Boring Conversations</h3>
+                <p>The prevalence of pickup lines and generic messages has led to uninteresting and meaningless small talk on dating apps.</p>
+                <div class="solution">
+                    <h3>Our Solution</h3>
+                    <p>Circles promotes dynamic conversation starters and personality-based prompts that lead to more engaging and fun interactions.</p>
+                </div>
+            </div>
 
-        <script>
-            fetch("/isauthed")
-                .then((res) => res.json())
-                .then((data) => {
-                    if (data.isAuthed) {
-                        document.getElementById("pf").innerHTML =
-                            "Your Profile";
-                        document.querySelector("nav").innerHTML =
-                            `<a href="/matches">Matches</a><a href="/profile/me">Your Profile</a><a href="/chat">Chats</a><a href="/logout">Logout</a>`;
-                    }
-                });
+            <!-- Card 3: Unreliability -->
+            <div class="feature-card">
+                <h3>Unreliability</h3>
+                <p>Online dating portals attract a lot of scam, bot, and catfish accounts. In order to provide our users with the quality experience they deserve, this has to be solved to make their time investment for our site worth their time. </p>
+                <div class="solution">
+                    <h3>Our Solution</h3>
+                    <p>Circles is constantly updated with new features and feedback-driven enhancements, ensuring a reliable and evolving platform.</p>
+                </div>
+            </div>
 
-            fetch("/myuser");   
-        </script>
-    </body>
+        </div>
+    </section>
+
+    <footer>
+        <p>&copy; 2024 Circles. All rights reserved.</p>
+        <p><a href="#terms">Terms of Service</a> | <a href="#privacy">Privacy Policy</a></p>
+    </footer>
+
+</body>
+
 </html>
